Fix description wrap

--- a/src/main/resources/com/cloudbees/plugins/credentials/common/card.css
+++ b/src/main/resources/com/cloudbees/plugins/credentials/common/card.css
@@ -305,11 +305,14 @@
         grid-template-columns: auto 1fr;
         row-gap: 0.25rem;
         text-align: left;
+        overflow: clip;
+        text-wrap: wrap;
+        max-width: 380px;
 
         .jenkins-dropdown__item__description {
             color: var(--text-color-secondary);
             grid-area: 2 / 2;
-            word-wrap: break-word;
+            line-height: 1.5;
         }
     }
 }
